--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,10 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.1.7.RELEASE</version>
+
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.test.crud</groupId>
+	<groupId>com.hamdani</groupId>
 	<artifactId>CustomerCRUD</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>CustomerCRUD</name>
@@ -74,7 +75,9 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
 		</plugins>
+
 	</build>
 
 </project>
